test/Harper/Tests/Good/FunctionComposition_Assignment.har
id :: a -> a;
id x = x;

compose :: Integer -> (a -> a) -> (a -> a);
compose n f = {
  var (result :: a -> a) = id;
  var (i :: Integer) = 0;

  while i < n {
    result @= f;
    i += 1;
  }

  return result;
};

inc :: Integer -> Integer;
inc n = n + 1;

main :: Integer;
main = (compose 42 inc) 42;