test/Harper/Tests/Bad/issue016_ifDefiniteAssignment.har
f :: Integer -> Integer;
f n = {
  var (x :: Integer);
  
  if (n == 42) {
    x := n;
  }

  (result :: Integer) = x + n;
  return result;
};

main :: Integer;
main = f 42;